# boolean-calculator

./: CMakeLists.txt  LICENSE  README.md
cmake/: signs.cmake  tools.cmake
include/BooleanCalculator/: exception.h  expression.h  math-symbols.h  node.h  strategy.h
src/: expression.cc  main.cc
